Opened 19 years ago

Closed 6 years ago

Last modified 5 years ago

#278 closed bug (fixed)

[FileTypes] disappearing menu items

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1/beta2
Component: Preferences/FileTypes Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by stpere)

This could be due linux build image, but anyway: Start FyleTypes and expand application select Be Application and go to Preferred application box click on popup menu and select None now click there again and you'll see that Tracker disappeared from menu list. Tested with rev16685 under vmware.

Change History (24)

comment:1 by axeld, 19 years ago

Does this also happen after Tracker has been started for the first time?

comment:2 by diver, 19 years ago

Yes, it is. it even happens if tracker hasn't been running before at all! It happens with other signatures as well.

comment:3 by axeld, 19 years ago

Status: newclosed

comment:4 by axeld, 19 years ago

Well, that's just normal behaviour: if an application doesn't support the type (or hasn't expressed so yet), it won't be listed in the preferred application's list. Of course, you can still choose those applications via the "Select" and "Same As" buttons - in that case, they will be part of the list as long as they are selected only. If you have a good idea on how to present this to the average user, feel free to tell me, otherwise it'll stay as is :-)

comment:5 by axeld, 19 years ago

Resolution: invalid

comment:6 by diver, 19 years ago

(In reply to comment #3)

Well, that's just normal behaviour: if an application doesn't support the type (or hasn't expressed so yet), it won't be listed in the preferred application's list.

Yes, but in this case Tracker already started and shouldn't tracker support things like Be Query and not disappear from list when one select None and then wants to select Tracker again? Are you sure about that?

comment:7 by axeld, 19 years ago

Status: closedreopened

comment:8 by axeld, 19 years ago

Resolution: invalid

comment:9 by axeld, 19 years ago

Oh, in that case, this really is a bug; I got the impression it would only happen before Tracker had run, sorry. I reopened the bug.

comment:10 by axeld, 19 years ago

Resolution: fixed

comment:11 by axeld, 19 years ago

As often with our MIME type problems, it was a case sensitivity problem. Fixed in hrev16987.

comment:12 by axeld, 19 years ago

Status: reopenedclosed

comment:13 by diver, 19 years ago

It still happens with Be Application, Be Root, Generidc file and Printer.

Tested with rev17033 under vmware.

comment:14 by axeld, 19 years ago

Which is to be expected because no one registers itself as preferred handler for them. I think Tracker would be okay for "Be Root", but for the rest?

comment:15 by diver, 19 years ago

(In reply to comment #8)

Which is to be expected because no one registers itself as preferred handler for them. I think Tracker would be okay for "Be Root", but for the rest?

Bt why then Tracker set as preferred handler for them in the first place?

comment:16 by axeld, 19 years ago

That's a good point. I've added those types to Tracker now, until there comes a better application :-)

comment:17 by diver, 16 years ago

Component: PreferencesPreferences/FileTypes
Platform: All
Resolution: fixed
Status: closedreopened

This is still happens for:

Be Application
Be Query Template
Be Root
Folder
Printer
Printer spool
Query
Symbolic Link
Volume
x-z7-compression

and some others....

comment:18 by stpere, 16 years ago

Description: modified (diff)
Version: R1 development

Here are some observations I made while investigating this ticket :

First, sorry for the novel >.<

I open FileTypes, I select the Be Application Mimetype, set the preferred app. to None and Tracker's item disappear from the menu, as mentioned.

I went to FileTypes's source code (PreferredAppMenu.cpp) and requested the message listing the supporting applications message to print on stream. I was puzzled to discover it wasn't returning Tracker. So I found out Tracker was first shown simply because it was the current Preferred App. So changing the preferred app had for effect to remove Tracker from this menu on next update (since it wasn't even listed as a supporting app)

Next, FileTypes > Application Types. I select Tracker, remove its support for Be Application Mimetype, and re-add it. Close (and save) the window. Back in FileTypes main window, I can now see Tracker in the menu for the preferred App of Be Applications. Selecting None doesn't make tracker disappear now. And the supporting Apps message returns Tracker now.

Next, I close and reopen FileTypes. The "fix" is still effective, the support of Be Applications files from Tracker is still recognized.

Next, I reboot. It returns to the old behaviour where selecting None makes Tracker disappears from the preferred app. menu.

So, there must be something wrong with the way the mime database is loaded on boot. I'm trying to figure it out, but can't promise anything, since I'm learning how it works while trying to fix it :)

comment:19 by diver, 15 years ago

Still here in hrev35569.

comment:20 by diver, 15 years ago

Version: R1/pre-alpha1R1/Development

comment:21 by Disreali, 14 years ago

Still experienced on hrev38912.

comment:22 by jscipione, 10 years ago

This seems to no longer be present as early as hrev47617. I'm not sure exactly when this was fixed I thought maybe it was hrev46724 but apparently not.

While the disappearing Tracker menu item bug is no longer a problem, if you change the preferred mime type to None for say Be application, close Filetypes are reopen it, the preferred mime type will be reset back to Tracker. I'm not sure if that is intended behavior or not.

comment:23 by waddlesplash, 6 years ago

Resolution: fixed
Status: reopenedclosed

comment:24 by nielx, 5 years ago

Milestone: R1R1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.