* Improved BMimeType::GetSupportingApps(): no longer uses the provided message to   send the request, and it now checks if the object is valid. * Fixed building supporting apps table: now all types are converted to lower case,   so that it works reliable now. This fixes bug #278. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16987 a95241bf-73f2-0310-859d-f6bbb57e9c96